# magic-red

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Include/: Material.h  Mesh.h  RenderObject.h  Shader.h  VertexDescriptors.h
Include/Common/: Config.h  Debug.h  Log.h
Include/Control/: Control.h
Include/Mesh/: MeshPushConstants.h  RenderMesh.h  Vertex.h
Include/Pipeline/: DefaultPipeline.h  GraphicsPipeline.h  Pipeline.h
Include/Scene/: Scene.h
Shaders/: basic_triangle.vert  blinn-phong.frag  fullscreen_quad.vert  gbuffer.frag  hello_triangle.vert  material.glsl  mesh_push_constants.glsl  scene_data.glsl  simple.psh  simple.vsh  triangle_mesh.frag  triangle_mesh.vert
Source/: DeletionQueue.h  Engine.cpp  Engine.h  Material.cpp  Renderer.cpp  Renderer.h  SceneData.cpp  SceneData.h  Shader.cpp  SurfaceHelper.mm  VertexDescriptors.cpp  main.cpp  main_old.cpp
Source/Camera/: Camera.cpp  Camera.h
Source/Common/: Config.h  Debug.h  Defaults.h  IdTypes.h  Log.h  Platform.h  RootDir.h
Source/Common/Compiler/: DisableWarnings.h  Unused.h
Source/Control/: Camera.h  Control.h
Source/Descriptor/: Descriptor.cpp  Descriptor.h
Source/EngineCommon/: Config.h  Debug.h  RootDir.h
Source/EngineCommon/Compiler/: DisableWarnings.h
Source/IncludeHelpers/: ImguiIncludes.h  VmaIncludes.h
Source/Light/: DirectionalLight.cpp  DirectionalLight.h  LightManager.cpp  PointLight.cpp  PointLight.h
Source/Managers/: LightManager.cpp  LightManager.h  Scene.h
Source/Material/: Material.h  MaterialCache.cpp  MaterialCache.h
Source/Mesh/: DefaultPushConstants.h  Mesh.cpp  Mesh.h  MeshCache.cpp  MeshCache.h  MeshPushConstants.h  RenderMesh.cpp  RenderMesh.h  RenderMeshComponent.cpp  RenderMeshComponent.h  RenderObject.cpp  RenderObject.h
Source/Model/: Model.cpp  Model.h
Source/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  MaterialFunctions.cpp  MaterialFunctions.h  Pipeline.cpp  Pipeline.h  PipelineCache.cpp  PipelineCache.h
Source/Pipelines/: DefaultPipeline.cpp  Pipeline.cpp
Source/Rendering/: BlinnPhongLightingStage.cpp  BlinnPhongLightingStage.h  GBufferStage.cpp  GBufferStage.h  GfxDevice.cpp  GfxDevice.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  SceneData.h  StageBase.cpp  StageBase.h
Source/Rendering/Descriptor/: Descriptor.cpp  Descriptor.h
Source/Rendering/Mesh/: Mesh.cpp  Mesh.h  RenderObject.cpp  RenderObject.h
Source/Rendering/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  MaterialFunctions.cpp  MaterialFunctions.h  Pipeline.cpp  Pipeline.h
Source/Rendering/Shader/: Shader.cpp
Source/Rendering/Vertex/: VertexDescriptors.cpp  VertexDescriptors.h
Source/Rendering/Wrappers/: Buffer.cpp  DynamicRendering.h  Image.cpp  Image.h
Source/Scene/: Scene.h
Source/Shader/: Shader.cpp  Shader.h
Source/Temp/: ExampleShaders.h
Source/Texture/: TextureCache.cpp  TextureCache.h  TextureData.h
Source/Vertex/: Vertex.h  VertexDescriptors.cpp  VertexDescriptors.h
Source/Wrappers/: Buffer.cpp  Buffer.h  DynamicRendering.cpp  DynamicRendering.h  Image.cpp  Image.h  ImageMemoryBarrier.cpp  ImageMemoryBarrier.h
include/: Callbacks.h  Material.h  Mesh.h  Types.h  Utils.h  buffer.h  image.h  mesh.h  shader.h  types.h  utils.h
include/Common/: Debug.h
include/Control/: Camera.h
shaders/: triangle_mesh.vert
src/: Material.cpp  Mesh.cpp  Shader.cpp  buffer.cpp  main.cpp  mesh.cpp  shader.cpp  utils.cpp
